[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scene/GameBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GameBoardTutorial.gd" type="Script" id=2]
[ext_resource path="res://Scripts/gridTutorial.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/SortButtonTutorial.gd" type="Script" id=5]
[ext_resource path="res://Scene/Hand.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 33
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 27
use_filter = true
font_data = ExtResource( 4 )

[node name="Level_0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
level = 0

[node name="MenuButton" parent="ColorRect/TopUi" index="1"]
visible = false

[node name="NextButton" parent="ColorRect/TopUi" index="2"]
visible = false

[node name="ShuffleButton" parent="ColorRect/TopUi" index="3"]
visible = false

[node name="Label" type="Label" parent="ColorRect/TopUi" index="5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -255.5
margin_top = 46.0
margin_right = 255.5
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Don't forget the SHAPE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="ColorRect/TopUi" index="6"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -255.5
margin_top = 40.0
margin_right = 255.5
margin_bottom = 111.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Make it SIMILAR to
the GIVEN SHAPE"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="grid" parent="." index="1"]
script = ExtResource( 3 )
n_x_n = 3
offset = 50
gap_between_boxes = 10
level_pattern = [ [ 1, 1, 1 ], [ 1, 3, 1 ], [ 1, 1, 1 ] ]
box_size = 100
shuffle_amount = 25

[node name="SortButton" parent="grid" index="0"]
margin_top = 734.0
margin_bottom = 812.0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="grid/SortButton" index="2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -255.5
margin_top = 24.0
margin_right = 255.5
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Keep PRESSED the button
to REMEMBER the shape"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Hand" parent="grid/SortButton" index="3" instance=ExtResource( 6 )]
position = Vector2( 240.015, 24.5685 )

[node name="Hand" parent="grid/box_container" index="0" instance=ExtResource( 6 )]
visible = false
position = Vector2( 285.05, 471.937 )
z_index = 2

[node name="SortBtnTimer" type="Timer" parent="grid" index="4"]
wait_time = 0.5
one_shot = true
[connection signal="sort_btn_tutorial_completed" from="grid" to="grid" method="_on_grid_sort_btn_tutorial_completed"]
[connection signal="timeout" from="grid/SortBtnTimer" to="grid" method="_on_SortBtnTimer_timeout"]
